// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonSelect margin 1`] = `
<div>
  <div
    aria-expanded="false"
    class="MuiAutocomplete-root autocomplete MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
    role="combobox"
  >
    <div
      class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal"
    >
      
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot inputRoot MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
      >
        <input
          aria-autocomplete="list"
          aria-describedby="test-helper-text"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class="MuiInputBase-input MuiInput-input MuiAutocomplete-input input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
          data-testid="common-select-input"
          id="test-select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div
          class="MuiAutocomplete-endAdornment"
        >
          <button
            aria-label="Clear"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-label="Open"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root"
        data-testid="common-select-helper-text"
        id="test-helper-text"
      >
        some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`CommonSelect variant 1`] = `
<div>
  <div
    aria-expanded="false"
    class="MuiAutocomplete-root autocomplete MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
    role="combobox"
  >
    <div
      class="MuiFormControl-root MuiTextField-root"
    >
      
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiAutocomplete-inputRoot inputRoot MuiInputBase-formControl MuiInputBase-adornedEnd MuiFilledInput-adornedEnd"
      >
        <input
          aria-autocomplete="list"
          aria-describedby="test-helper-text"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class="MuiInputBase-input MuiFilledInput-input MuiAutocomplete-input input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiFilledInput-inputAdornedEnd"
          data-testid="common-select-input"
          id="test-select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div
          class="MuiAutocomplete-endAdornment"
        >
          <button
            aria-label="Clear"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-label="Open"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained"
        data-testid="common-select-helper-text"
        id="test-helper-text"
      >
        some helper text
      </p>
    </div>
  </div>
</div>
`;

exports[`render creatable CommonSelect 1`] = `
<div>
  <div
    aria-expanded="false"
    class="MuiAutocomplete-root autocomplete MuiAutocomplete-hasClearIcon"
    role="combobox"
  >
    <div
      class="MuiFormControl-root MuiTextField-root"
    >
      
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot inputRoot MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
      >
        <input
          aria-autocomplete="list"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class="MuiInputBase-input MuiInput-input MuiAutocomplete-input input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
          data-testid="common-select-input"
          id="select-input"
          placeholder=""
          spellcheck="false"
          type="text"
          value="test"
        />
        <div
          class="MuiAutocomplete-endAdornment"
        >
          <button
            aria-label="Clear"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator MuiAutocomplete-clearIndicatorDirty"
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                data-testid="common-select-close-icon"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`render read-only CommonSelect with value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    Algeria
  </span>
</div>
`;

exports[`test disabled CommonSelect 1`] = `
<div>
  <div
    aria-expanded="false"
    class="MuiAutocomplete-root autocomplete MuiAutocomplete-hasPopupIcon"
    role="combobox"
  >
    <div
      class="MuiFormControl-root MuiTextField-root"
    >
      
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot inputRoot Mui-disabled Mui-disabled MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
      >
        <input
          aria-autocomplete="list"
          aria-invalid="false"
          autocapitalize="none"
          autocomplete="off"
          class="MuiInputBase-input MuiInput-input MuiAutocomplete-input input MuiAutocomplete-inputFocused Mui-disabled Mui-disabled MuiInputBase-inputAdornedEnd"
          data-testid="common-select-input"
          disabled=""
          id="select-input-disabled"
          placeholder=""
          spellcheck="false"
          type="text"
          value=""
        />
        <div
          class="MuiAutocomplete-endAdornment"
        >
          <button
            aria-label="Open"
            class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            title="Open"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root Mui-disabled"
        data-testid="common-select-helper-text"
      >
        disabled
      </p>
    </div>
  </div>
</div>
`;
